@@ -1,15 +1,13 @@
-FROM ibmjava:8-sdk AS builder
+FROM registry.access.redhat.com/ubi8/openjdk-17:1.11 AS builder
 LABEL maintainer="IBM Java Engineering at IBM Cloud"
 
 WORKDIR /app
 COPY . /app
 
-RUN apt-get update \
-  && apt-get install -y --no-install-recommends maven=3.6.0-1~18.04.1
-RUN mvn -N io.takari:maven:wrapper -Dmaven=3.5.0
+RUN mvn -N wrapper:wrapper -Dmaven=3.8.4
 RUN ./mvnw install
 
-FROM ibmjava:8-sfj
+FROM registry.access.redhat.com/ubi8/openjdk-17:1.11
 LABEL maintainer="IBM Java Engineering at IBM Cloud"
 
 COPY --from=builder /app/target/knative-eventing-1.0-SNAPSHOT.jar /app.jar
@@ -19,4 +17,4 @@ ENV PORT=8080
 
 EXPOSE 8080
 
-ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /app.jar" ]
+ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar --add-opens java.base/java.time=ALL-UNNAMED /app.jar" ]
